--- a/setup.cfg
+++ b/setup.cfg
@@ -35,6 +35,7 @@ install_requires =
     magicgui
     qtpy
     scikit-image
+    fractal-tasks-core==0.14.0
 
 python_requires = >=3.8
 include_package_data = True
