Add sample data loader from zenodo

--- a/setup.cfg
+++ b/setup.cfg
@@ -36,6 +36,7 @@ install_requires =
     qtpy
     scikit-image
     fractal-tasks-core==0.14.0
+    wget
 
 python_requires = >=3.8
 include_package_data = True
