--- a/src/napari_ome_zarr_navigator/napari.yaml
+++ b/src/napari_ome_zarr_navigator/napari.yaml
@@ -10,7 +10,7 @@ contributions:
       python_name: napari_ome_zarr_navigator:ImgBrowser
       title: Image Browser
     - id: napari-ome-zarr-navigator.make_roi_loader
-      python_name: napari_ome_zarr_navigator:ROILoader
+      python_name: napari_ome_zarr_navigator:ROILoaderImage
       title: ROI Loader
     - id: napari-ome-zarr-navigator.hiPSC_zarr
       python_name: napari_ome_zarr_navigator._sample_data:hiPSC_zarr
