--- a/src/napari_ome_zarr_navigator/napari.yaml
+++ b/src/napari_ome_zarr_navigator/napari.yaml
@@ -14,11 +14,17 @@ contributions:
       title: ROI Loader
     - id: napari-ome-zarr-navigator.hiPSC_zarr
       python_name: napari_ome_zarr_navigator._sample_data:hiPSC_zarr
-      title: Load sample data from Zenodo
+      title: Load hiPSC sample data from Zenodo
+    - id: napari-ome-zarr-navigator.leukemia_zarr
+      python_name: napari_ome_zarr_navigator._sample_data:leukemia_zarr
+      title: Load leukemia PDX sample data from Zenodo
   sample_data:
     - command: napari-ome-zarr-navigator.hiPSC_zarr
       display_name: hiPSC
       key: unique_id.1
+    - command: napari-ome-zarr-navigator.leukemia_zarr
+      display_name: leukemia
+      key: unique_id.2
   widgets:
     - command: napari-ome-zarr-navigator.make_img_browser
       display_name: Image Browser
