--- a/setup.cfg
+++ b/setup.cfg
@@ -35,10 +35,11 @@ install_requires =
     magicgui
     qtpy
     scikit-image
-    fractal-tasks-core==1.3.2
+    fractal-tasks-core==1.4.2
     napari-ome-zarr
     ome-zarr
     wget
+    ngio>=0.1.6, <0.2
 
 python_requires = >=3.8
 include_package_data = True
