--- a/setup.cfg
+++ b/setup.cfg
@@ -18,8 +18,8 @@ classifiers =
     Programming Language :: Python
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3 :: Only
-    Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3.11
+    Programming Language :: Python :: 3.12
     Topic :: Scientific/Engineering :: Image Processing
 project_urls =
     Bug Tracker = https://github.com/fractal-analytics-platform/napari-ome-zarr-navigator/issues
@@ -34,13 +34,12 @@ install_requires =
     magicgui
     qtpy
     scikit-image
-    fractal-tasks-core==1.4.2
     napari-ome-zarr
     ome-zarr
     wget
-    ngio>=0.1.6, <0.2
+    ngio==0.2.0beta2
 
-python_requires = >=3.8
+python_requires = >=3.11
 include_package_data = True
 package_dir =
     =src
