Update to ngio 0.2.2

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,7 +37,7 @@ install_requires =
     napari-ome-zarr
     ome-zarr
     wget
-    ngio==0.2.0beta3
+    ngio==0.2.2
 
 python_requires = >=3.11
 include_package_data = True
