--- a/setup.cfg
+++ b/setup.cfg
@@ -38,6 +38,7 @@ install_requires =
     ome-zarr
     wget
     ngio==0.2.2
+    numcodecs!=0.14.0,!=0.14.1,<0.16 # avoids zarr issue
 
 python_requires = >=3.11
 include_package_data = True
