Update dependency pins

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,8 +37,8 @@ install_requires =
     napari-ome-zarr
     ome-zarr
     wget
-    ngio==0.2.2
-    numcodecs!=0.14.0,!=0.14.1,<0.16 # avoids zarr issue
+    ngio>=0.2.4, < 0.3
+    numcodecs!=0.14.0,!=0.14.1,!=0.16 # avoids zarr issue
 
 python_requires = >=3.11
 include_package_data = True
