--- a/setup.cfg
+++ b/setup.cfg
@@ -37,7 +37,7 @@ install_requires =
     napari-ome-zarr
     ome-zarr
     wget
-    ngio>=0.4.0
+    ngio>=0.4.0,<0.5
     numcodecs!=0.14.0,!=0.14.1,!=0.16 # avoids zarr issue
 
 python_requires = >=3.11
